# Arduino_RPClite

./: README.md  RpcLite.h  library.json  library.properties
.github/workflows/: arduino-lint.yml  compile-examples.yml
examples/decoder_example/: decoder_example.ino
examples/decoder_tests/: DummyTransport.h  decoder_tester.h  decoder_tests.ino
examples/dispatcher_example/: dispatcher_example.ino
examples/rpc_lite_client/: rpc_lite_client.ino
examples/rpc_lite_dummy/: rpc_lite_dummy.ino
examples/rpc_lite_server/: rpc_lite_server.ino
examples/simple_client/: simple_client.ino
examples/wrapper_example/: wrapper_example.ino
extras/: serial_client.py  serial_server.py
extras/examples/: serial_client_example.py  serial_server_example.py
extras/integration_test/: RPCClient_test.go
extras/integration_test/RpcClientTest/: RpcClientTest.ino  RpcClient_test.go  go.mod
extras/test/: CMakeLists.txt  README.md
extras/test/ArduinoCore-api/: Arduino.h
extras/test/ArduinoCore-api/api/: Print.h  USBAPI.h
extras/test/include/: StreamMock.h
extras/test/src/: delay.c  dtostrf.cpp
extras/test/src/RPC/: test_RPCClient.cpp  utils.cpp  utils.h
extras/test/src/String/: test_move.cpp
src/: Arduino_RPClite.h  DummyTransport.h  MsgPack.h  RPClite.h  RpcLite.h  SerialTransport.h  client.h  decoder.h  decoder_manager.h  dispatcher.h  error.h  request.h  rpc.h  rpclite_utils.h  server.h  transport.h  wrapper.h
src/MsgPack/: Packer.h  Types.h  Unpacker.h
test/RpcClientTest/: RpcClientTest.ino  RpcClient_test.go
